--- a/config/install/field.field.paragraph.anchor_hero.field_paragraph_media.yml
+++ b/config/install/field.field.paragraph.anchor_hero.field_paragraph_media.yml
@@ -2,17 +2,17 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_landing_page_hero_logo
+    - field.storage.paragraph.field_paragraph_media
     - media.type.image
-    - node.type.landing_page
-id: node.landing_page.field_landing_page_hero_logo
-field_name: field_landing_page_hero_logo
-entity_type: node
-bundle: landing_page
-label: 'Hero Logo'
+    - paragraphs.paragraphs_type.anchor_hero
+id: paragraph.anchor_hero.field_paragraph_media
+field_name: field_paragraph_media
+entity_type: paragraph
+bundle: anchor_hero
+label: 'Anchor hero image'
 description: ''
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
