--- a/tide_landing_page.info.yml
+++ b/tide_landing_page.info.yml
@@ -111,6 +111,7 @@ config_devel:
     - field.field.paragraph.basic_text.field_paragraph_body
     - field.field.paragraph.call_to_action.field_paragraph_body
     - field.field.paragraph.call_to_action.field_paragraph_cta
+    - field.field.paragraph.call_to_action.field_paragraph_cta_style
     - field.field.paragraph.call_to_action.field_paragraph_media
     - field.field.paragraph.call_to_action.field_paragraph_title
     - field.field.paragraph.card_event.field_paragraph_cta
@@ -184,6 +185,7 @@ config_devel:
     - field.storage.paragraph.field_paragraph_accordion_style
     - field.storage.paragraph.field_paragraph_body
     - field.storage.paragraph.field_paragraph_cta
+    - field.storage.paragraph.field_paragraph_cta_style
     - field.storage.paragraph.field_paragraph_cta_text
     - field.storage.paragraph.field_paragraph_date
     - field.storage.paragraph.field_paragraph_location
