--- a/config/install/field.field.node.landing_page.field_landing_page_c_secondary.yml
+++ b/config/install/field.field.node.landing_page.field_landing_page_c_secondary.yml
@@ -5,8 +5,6 @@ dependencies:
     - block_content.type.campaign
     - field.storage.node.field_landing_page_c_secondary
     - node.type.landing_page
-  module:
-    - entity_reference_revisions
 id: node.landing_page.field_landing_page_c_secondary
 field_name: field_landing_page_c_secondary
 entity_type: node
@@ -26,4 +24,4 @@ settings:
       field: _none
     auto_create: false
     auto_create_bundle: ''
-field_type: entity_reference_revisions
+field_type: entity_reference
