--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "GPL-2.0+",
     "require": {
         "dpc-sdp/tide_core": "dev-feature/SDPA-904-event-content-type",
-        "dpc-sdp/tide_media": "@dev",
+        "dpc-sdp/tide_media": "dev-feature/SDPA-904-event-content-type",
         "drupal/paragraphs": "1.2",
         "drupal/maxlength": "^1.0@beta",
         "drupal/smart_trim": "^1.1"
