Update composer to point to tide_news with configuration files moved from tide_core

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     },
     "suggest": {
         "dpc-sdp/tide_api": "@dev",
-        "dpc-sdp/tide_news": "@dev",
+        "dpc-sdp/tide_news": "dev-feature/SDPA-904-event-content-type",
         "dpc-sdp/tide_webform": "@dev"
     },
     "repositories": {
