[SDPA-937] Added Header Components and Introduction banner to landing page.

--- a/config/optional/jsonapi_extras.jsonapi_resource_config.node--landing_page.yml
+++ b/config/optional/jsonapi_extras.jsonapi_resource_config.node--landing_page.yml
@@ -211,7 +211,7 @@ resourceFields:
       id: ''
     disabled: false
     advancedOptionsIcon: ''
-    enhancer_label: ''  
+    enhancer_label: ''
   field_landing_page_bg_colour:
     fieldName: field_landing_page_bg_colour
     publicName: field_landing_page_bg_colour
@@ -247,6 +247,14 @@ resourceFields:
   field_landing_page_c_secondary:
     fieldName: field_landing_page_c_secondary
     publicName: field_landing_page_c_secondary
+    enhancer:
+      id: ''
+    disabled: false
+    advancedOptionsIcon: ''
+    enhancer_label: ''
+  field_landing_page_header:
+    fieldName: field_landing_page_header
+    publicName: field_landing_page_header
     enhancer:
       id: ''
     disabled: false
