--- a/config/install/core.entity_view_display.node.landing_page.default.yml
+++ b/config/install/core.entity_view_display.node.landing_page.default.yml
@@ -10,6 +10,7 @@ dependencies:
     - field.field.node.landing_page.field_landing_page_c_secondary
     - field.field.node.landing_page.field_landing_page_component
     - field.field.node.landing_page.field_landing_page_contact
+    - field.field.node.landing_page.field_landing_page_header
     - field.field.node.landing_page.field_landing_page_hero_image
     - field.field.node.landing_page.field_landing_page_hero_logo
     - field.field.node.landing_page.field_landing_page_hero_theme
@@ -111,6 +112,15 @@ content:
   field_landing_page_contact:
     type: entity_reference_revisions_entity_view
     weight: 14
+    label: above
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
+    region: content
+  field_landing_page_header:
+    type: entity_reference_revisions_entity_view
+    weight: 23
     label: above
     settings:
       view_mode: default
