--- a/config/install/core.entity_view_display.node.landing_page.featured_card.yml
+++ b/config/install/core.entity_view_display.node.landing_page.featured_card.yml
@@ -54,21 +54,34 @@ content:
       summary_handler: full
     third_party_settings: {  }
 hidden:
+  field_bottom_graphical_image: true
   field_featured_image: true
+  field_graphical_image: true
+  field_landing_page_bg_colour: true
   field_landing_page_c_primary: true
   field_landing_page_c_secondary: true
   field_landing_page_component: true
   field_landing_page_contact: true
+  field_landing_page_hero_image: true
+  field_landing_page_hero_logo: true
+  field_landing_page_hero_theme: true
   field_landing_page_intro_text: true
   field_landing_page_key_journeys: true
+  field_landing_page_nav_title: true
   field_landing_page_show_contact: true
   field_metatags: true
   field_related_links: true
   field_show_content_rating: true
+  field_show_news_search: true
   field_show_related_content: true
+  field_show_site_section_nav: true
   field_show_social_sharing: true
+  field_show_table_of_content: true
+  field_show_topic_term_and_tags: true
   field_show_whats_next: true
   field_tags: true
   field_topic: true
   field_whats_next: true
   links: true
+  scheduled_archiving: true
+  scheduled_publishing: true
