--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "dpc-sdp/tide_landing_page",
     "description": "Development configuration for all Tide modules. This file is merged with module's composer.json for development and testing.",
     "type": "drupal-module",
-    "license": "proprietary",
+    "license": "GPL-2.0+",
     "require": {
         "dpc-sdp/tide_core": "^0.0.1",
         "dpc-sdp/tide_media": "@dev",
