--- a/tide_landing_page.info.yml
+++ b/tide_landing_page.info.yml
@@ -43,6 +43,7 @@ config_devel:
     - core.entity_form_display.paragraph.keydates.default
     - core.entity_form_display.paragraph.embedded_webform.default
     - core.entity_form_display.paragraph.featured_news.default
+    - core.entity_form_display.paragraph.introduction_banner.default
     - core.entity_view_display.node.landing_page.card
     - core.entity_view_display.node.landing_page.default
     - core.entity_view_display.node.landing_page.featured_card
@@ -66,6 +67,7 @@ config_devel:
     - core.entity_view_display.paragraph.embedded_webform.default
     - core.entity_view_display.paragraph.embedded_webform.preview
     - core.entity_view_display.paragraph.featured_news.default
+    - core.entity_view_display.paragraph.introduction_banner.default
     - core.entity_view_display.paragraph.keydates.default
     - core.entity_view_display.paragraph.key_journeys.default
     - core.entity_form_display.paragraph.contact_us.default
@@ -88,6 +90,7 @@ config_devel:
     - field.field.node.landing_page.field_landing_page_hero_theme
     - field.field.node.landing_page.field_landing_page_c_primary
     - field.field.node.landing_page.field_landing_page_component
+    - field.field.node.landing_page.field_landing_page_header
     - field.field.node.landing_page.field_landing_page_intro_text
     - field.field.node.landing_page.field_landing_page_key_journeys
     - field.field.node.landing_page.field_metatags
@@ -141,6 +144,9 @@ config_devel:
     - field.field.paragraph.card_promotion.field_paragraph_topic
     - field.field.paragraph.card_promotion_auto.field_paragraph_reference
     - field.field.paragraph.card_promotion_auto.field_paragraph_cta_text
+    - field.field.paragraph.introduction_banner.field_paragraph_links
+    - field.field.paragraph.introduction_banner.field_paragraph_summary
+    - field.field.paragraph.introduction_banner.field_paragraph_title
     - field.field.paragraph.key_journeys.field_paragraph_cta
     - field.field.paragraph.key_journeys.field_paragraph_link
     - field.field.paragraph.key_journeys.field_paragraph_links
@@ -173,6 +179,7 @@ config_devel:
     - field.storage.node.field_landing_page_c_primary
     - field.storage.node.field_landing_page_component
     - field.storage.node.field_landing_page_contact
+    - field.storage.node.field_landing_page_header
     - field.storage.node.field_landing_page_intro_text
     - field.storage.node.field_landing_page_key_journeys
     - field.storage.node.field_landing_page_show_contact
@@ -221,6 +228,7 @@ config_devel:
     - paragraphs.paragraphs_type.card_promotion_auto
     - paragraphs.paragraphs_type.embedded_webform
     - paragraphs.paragraphs_type.featured_news
+    - paragraphs.paragraphs_type.introduction_banner
     - paragraphs.paragraphs_type.key_journeys
     - paragraphs.paragraphs_type.keydates
     - paragraphs.paragraphs_type.contact_us
