[SDPA-94] Added Image Gallery.

--- a/config/install/field.field.node.landing_page.field_landing_page_component.yml
+++ b/config/install/field.field.node.landing_page.field_landing_page_component.yml
@@ -15,6 +15,7 @@ dependencies:
     - paragraphs.paragraphs_type.card_navigation_featured_auto
     - paragraphs.paragraphs_type.card_promotion
     - paragraphs.paragraphs_type.card_promotion_auto
+    - paragraphs.paragraphs_type.media_gallery
     - paragraphs.paragraphs_type.news_listing
   module:
     - entity_reference_revisions
@@ -45,6 +46,7 @@ settings:
       card_keydates: card_keydates
       call_to_action: call_to_action
       news_listing: news_listing
+      media_gallery: media_gallery
     target_bundles_drag_drop:
       banner:
         weight: -33
@@ -100,6 +102,9 @@ settings:
       news_listing:
         enabled: true
         weight: 24
+      media_gallery:
+        enabled: true
+        weight: 26
       contact_us:
         weight: 34
         enabled: false
