--- a/tide_landing_page.info.yml
+++ b/tide_landing_page.info.yml
@@ -24,7 +24,9 @@ dependencies:
 config_devel:
   install:
     - block_content.type.campaign
+    - block_content.type.media_gallery
     - core.entity_form_display.block_content.campaign.default
+    - core.entity_form_display.block_content.media_gallery.default
     - core.entity_form_display.node.landing_page.default
     - core.entity_form_display.paragraph.accordion.default
     - core.entity_form_display.paragraph.accordion_content.default
@@ -41,9 +43,11 @@ config_devel:
     - core.entity_form_display.paragraph.card_promotion_auto.default
     - core.entity_form_display.paragraph.key_journeys.default
     - core.entity_form_display.paragraph.keydates.default
+    - core.entity_form_display.paragraph.media_gallery.default
     - core.entity_form_display.paragraph.embedded_webform.default
     - core.entity_form_display.paragraph.featured_news.default
     - core.entity_form_display.paragraph.introduction_banner.default
+    - core.entity_view_display.block_content.media_gallery.default
     - core.entity_view_display.node.landing_page.card
     - core.entity_view_display.node.landing_page.default
     - core.entity_view_display.node.landing_page.featured_card
@@ -70,6 +74,7 @@ config_devel:
     - core.entity_view_display.paragraph.introduction_banner.default
     - core.entity_view_display.paragraph.keydates.default
     - core.entity_view_display.paragraph.key_journeys.default
+    - core.entity_view_display.paragraph.media_gallery.default
     - core.entity_form_display.paragraph.contact_us.default
     - core.entity_form_display.paragraph.news_listing.default
     - core.entity_form_display.paragraph.phone.default
@@ -82,6 +87,10 @@ config_devel:
     - field.field.block_content.campaign.field_block_cta
     - field.field.block_content.campaign.field_block_image
     - field.field.block_content.campaign.field_block_title
+    - field.field.block_content.media_gallery.field_gallery_featured_image
+    - field.field.block_content.media_gallery.field_gallery_media
+    - field.field.block_content.media_gallery.field_tags
+    - field.field.block_content.media_gallery.field_topic
     - field.field.node.landing_page.field_landing_page_c_secondary
     - field.field.node.landing_page.field_featured_image
     - field.field.node.landing_page.field_graphical_image
@@ -155,6 +164,7 @@ config_devel:
     - field.field.paragraph.keydates.field_paragraph_link
     - field.field.paragraph.keydates.field_paragraph_summary
     - field.field.paragraph.keydates.field_paragraph_title
+    - field.field.paragraph.media_gallery.field_paragraph_media_gallery
     - field.field.node.landing_page.field_landing_page_contact
     - field.field.node.landing_page.field_landing_page_show_contact
     - field.field.node.landing_page.field_landing_page_summary
@@ -175,6 +185,9 @@ config_devel:
     - field.storage.block_content.field_block_cta
     - field.storage.block_content.field_block_image
     - field.storage.block_content.field_block_title
+    - field.storage.block_content.field_gallery_featured_image
+    - field.storage.block_content.field_gallery_media
+    - field.storage.paragraph.field_paragraph_media_gallery
     - field.storage.node.field_landing_page_c_secondary
     - field.storage.node.field_landing_page_c_primary
     - field.storage.node.field_landing_page_component
@@ -231,6 +244,7 @@ config_devel:
     - paragraphs.paragraphs_type.introduction_banner
     - paragraphs.paragraphs_type.key_journeys
     - paragraphs.paragraphs_type.keydates
+    - paragraphs.paragraphs_type.media_gallery
     - paragraphs.paragraphs_type.contact_us
     - paragraphs.paragraphs_type.news_listing
     - paragraphs.paragraphs_type.phone
@@ -240,6 +254,7 @@ config_devel:
   optional:
     - jsonapi_extras.jsonapi_resource_config.node--landing_page
     - jsonapi_extras.jsonapi_resource_config.block_content--campaign
+    - jsonapi_extras.jsonapi_resource_config.block_content--media_gallery
     - jsonapi_extras.jsonapi_resource_config.paragraph--banner
     - jsonapi_extras.jsonapi_resource_config.paragraph--call_to_action
     - jsonapi_extras.jsonapi_resource_config.paragraph--card_event
@@ -250,4 +265,5 @@ config_devel:
     - jsonapi_extras.jsonapi_resource_config.paragraph--featured_news
     - jsonapi_extras.jsonapi_resource_config.paragraph--key_journeys
     - jsonapi_extras.jsonapi_resource_config.paragraph--keydates
+    - jsonapi_extras.jsonapi_resource_config.paragraph--media_gallery
     - jsonapi_extras.jsonapi_resource_config.paragraph--social_link
