--- a/tide_landing_page.info.yml
+++ b/tide_landing_page.info.yml
@@ -32,6 +32,7 @@ config_devel:
     - core.entity_form_display.paragraph.basic_text.default
     - core.entity_form_display.paragraph.call_to_action.default
     - core.entity_form_display.paragraph.card_event.default
+    - core.entity_form_display.paragraph.card_event_auto.default
     - core.entity_form_display.paragraph.card_keydates.default
     - core.entity_form_display.paragraph.card_navigation.default
     - core.entity_form_display.paragraph.card_navigation_auto.default
@@ -56,6 +57,7 @@ config_devel:
     - core.entity_view_display.paragraph.call_to_action.default
     - core.entity_view_display.paragraph.call_to_action.preview
     - core.entity_view_display.paragraph.card_event.default
+    - core.entity_view_display.paragraph.card_event_auto.default
     - core.entity_view_display.paragraph.card_keydates.default
     - core.entity_view_display.paragraph.card_navigation.default
     - core.entity_view_display.paragraph.card_navigation_auto.default
@@ -117,6 +119,8 @@ config_devel:
     - field.field.paragraph.call_to_action.field_paragraph_cta_style
     - field.field.paragraph.call_to_action.field_paragraph_media
     - field.field.paragraph.call_to_action.field_paragraph_title
+    - field.field.paragraph.card_event_auto.field_paragraph_cta_text
+    - field.field.paragraph.card_event_auto.field_paragraph_reference
     - field.field.paragraph.card_event.field_paragraph_cta
     - field.field.paragraph.card_event.field_paragraph_date
     - field.field.paragraph.card_event.field_paragraph_location
@@ -220,6 +224,7 @@ config_devel:
     - paragraphs.paragraphs_type.call_to_action
     - paragraphs.paragraphs_type.card_event
     - paragraphs.paragraphs_type.card_keydates
+    - paragraphs.paragraphs_type.card_event_auto
     - paragraphs.paragraphs_type.card_navigation
     - paragraphs.paragraphs_type.card_navigation_auto
     - paragraphs.paragraphs_type.card_navigation_featured
