--- a/tide_landing_page.info.yml
+++ b/tide_landing_page.info.yml
@@ -185,6 +185,7 @@ config_devel:
     - field.storage.paragraph.field_paragraph_accordion_style
     - field.storage.paragraph.field_paragraph_body
     - field.storage.paragraph.field_paragraph_cta_style
+    - field.storage.paragraph.field_paragraph_cta_text
     - field.storage.paragraph.field_paragraph_date
     - field.storage.paragraph.field_paragraph_location
     - field.storage.paragraph.field_paragraph_links
