--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "drupal-module",
     "license": "GPL-2.0+",
     "require": {
-        "dpc-sdp/tide_core": "dev-master",
+        "dpc-sdp/tide_core": "@dev",
         "dpc-sdp/tide_media": "@dev",
         "drupal/paragraphs": "1.2",
         "drupal/maxlength": "^1.0@beta",
@@ -29,9 +29,5 @@
         },
         "process-timeout": 0,
         "sort-packages": true
-    },
-    "extra": {
-        "patches": {
-        }
     }
 }
