Add tide_event as dependency

--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
     "license": "GPL-2.0+",
     "require": {
         "dpc-sdp/tide_core": "@dev",
+        "dpc-sdp/tide_event": "@dev",
         "dpc-sdp/tide_media": "@dev",
         "drupal/paragraphs": "1.2",
         "drupal/maxlength": "^1.0@beta",
