--- a/tide_landing_page.info.yml
+++ b/tide_landing_page.info.yml
@@ -14,6 +14,7 @@ dependencies:
   - drupal:telephone
   - drupal:user
   - dpc-sdp:tide_core
+  - dpc-sdp:tide_event
   - dpc-sdp:tide_media
   - address:address
   - entity_reference_revisions:entity_reference_revisions
