--- a/config/install/core.entity_form_display.paragraph.card_event.default.yml
+++ b/config/install/core.entity_form_display.paragraph.card_event.default.yml
@@ -5,6 +5,7 @@ dependencies:
     - entity_browser.browser.tide_image_browser
     - field.field.paragraph.card_event.field_paragraph_cta
     - field.field.paragraph.card_event.field_paragraph_date
+    - field.field.paragraph.card_event.field_paragraph_date_range
     - field.field.paragraph.card_event.field_paragraph_location
     - field.field.paragraph.card_event.field_paragraph_media
     - field.field.paragraph.card_event.field_paragraph_summary
@@ -14,6 +15,7 @@ dependencies:
   module:
     - address
     - datetime
+    - datetime_range
     - entity_browser
     - link
 id: paragraph.card_event.default
@@ -34,6 +36,12 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: datetime_default
+    region: content
+  field_paragraph_date_range:
+    weight: 7
+    settings: {  }
+    third_party_settings: {  }
+    type: daterange_default
     region: content
   field_paragraph_location:
     weight: 3
