--- a/config/install/core.entity_view_display.paragraph.card_event.default.yml
+++ b/config/install/core.entity_view_display.paragraph.card_event.default.yml
@@ -4,6 +4,7 @@ dependencies:
   config:
     - field.field.paragraph.card_event.field_paragraph_cta
     - field.field.paragraph.card_event.field_paragraph_date
+    - field.field.paragraph.card_event.field_paragraph_date_range
     - field.field.paragraph.card_event.field_paragraph_location
     - field.field.paragraph.card_event.field_paragraph_media
     - field.field.paragraph.card_event.field_paragraph_summary
@@ -13,6 +14,7 @@ dependencies:
   module:
     - address
     - datetime
+    - datetime_range
     - link
 id: paragraph.card_event.default
 targetEntityType: paragraph
@@ -39,6 +41,16 @@ content:
       timezone_override: ''
     third_party_settings: {  }
     type: datetime_default
+    region: content
+  field_paragraph_date_range:
+    weight: 7
+    label: above
+    settings:
+      separator: '-'
+      format_type: medium
+      timezone_override: ''
+    third_party_settings: {  }
+    type: daterange_default
     region: content
   field_paragraph_location:
     weight: 5
