--- a/config/install/core.entity_form_display.paragraph.card_event.default.yml
+++ b/config/install/core.entity_form_display.paragraph.card_event.default.yml
@@ -24,7 +24,7 @@ bundle: card_event
 mode: default
 content:
   field_paragraph_cta:
-    weight: 5
+    weight: 6
     settings:
       placeholder_url: ''
       placeholder_title: ''
@@ -38,13 +38,13 @@ content:
     type: datetime_default
     region: content
   field_paragraph_date_range:
-    weight: 7
+    weight: 3
     settings: {  }
     third_party_settings: {  }
     type: daterange_default
     region: content
   field_paragraph_location:
-    weight: 3
+    weight: 4
     settings:
       default_country: null
     third_party_settings: {  }
@@ -61,12 +61,13 @@ content:
       field_widget_display_settings:
         view_mode: media_browser_preview
       open: false
+      field_widget_replace: false
     third_party_settings: {  }
     type: entity_browser_entity_reference
     region: content
   field_paragraph_summary:
     type: string_textarea
-    weight: 4
+    weight: 5
     settings:
       placeholder: ''
       rows: 5
@@ -81,7 +82,7 @@ content:
     type: string_textfield
     region: content
   field_paragraph_topic:
-    weight: 6
+    weight: 7
     settings:
       match_operator: CONTAINS
       size: 60
