--- a/tide_landing_page.info.yml
+++ b/tide_landing_page.info.yml
@@ -128,6 +128,7 @@ config_devel:
     - field.field.paragraph.call_to_action.field_paragraph_title
     - field.field.paragraph.card_event.field_paragraph_cta
     - field.field.paragraph.card_event.field_paragraph_date
+    - field.field.paragraph.card_event.field_paragraph_date_range
     - field.field.paragraph.card_event.field_paragraph_location
     - field.field.paragraph.card_event.field_paragraph_media
     - field.field.paragraph.card_event.field_paragraph_topic
