--- a/tide_landing_page.info.yml
+++ b/tide_landing_page.info.yml
@@ -5,6 +5,7 @@ package: Tide
 core: 8.x
 dependencies:
   - drupal:datetime
+  - drupal:datetime_range
   - drupal:field
   - drupal:link
   - drupal:menu_ui
