Add latest news component to body of tide landing page content type

--- a/config/install/field.field.node.landing_page.field_landing_page_component.yml
+++ b/config/install/field.field.node.landing_page.field_landing_page_component.yml
@@ -15,6 +15,7 @@ dependencies:
     - paragraphs.paragraphs_type.card_navigation_featured_auto
     - paragraphs.paragraphs_type.card_promotion
     - paragraphs.paragraphs_type.card_promotion_auto
+    - paragraphs.paragraphs_type.latest_events
     - paragraphs.paragraphs_type.media_gallery
     - paragraphs.paragraphs_type.news_listing
   module:
@@ -47,6 +48,7 @@ settings:
       call_to_action: call_to_action
       news_listing: news_listing
       media_gallery: media_gallery
+      latest_events: latest_events
     target_bundles_drag_drop:
       banner:
         weight: -33
@@ -105,13 +107,25 @@ settings:
       media_gallery:
         enabled: true
         weight: 26
+      latest_events:
+        enabled: true
+        weight: 29
       contact_us:
         weight: 34
+        enabled: false
+      call_to_action_image:
+        weight: 35
         enabled: false
       phone:
         weight: 38
         enabled: false
       social_link:
         weight: 40
+        enabled: false
+      event_details:
+        weight: 46
+        enabled: false
+      introduction_banner:
+        weight: 48
         enabled: false
 field_type: entity_reference_revisions
