[SDPA-855] Added Card Carousel paragraph.

--- a/config/install/field.field.node.landing_page.field_landing_page_component.yml
+++ b/config/install/field.field.node.landing_page.field_landing_page_component.yml
@@ -7,6 +7,7 @@ dependencies:
     - paragraphs.paragraphs_type.accordion
     - paragraphs.paragraphs_type.basic_text
     - paragraphs.paragraphs_type.call_to_action
+    - paragraphs.paragraphs_type.card_carousel
     - paragraphs.paragraphs_type.card_event
     - paragraphs.paragraphs_type.card_event_auto
     - paragraphs.paragraphs_type.card_keydates
@@ -51,6 +52,7 @@ settings:
       card_event_auto: card_event_auto
       media_gallery: media_gallery
       latest_events: latest_events
+      card_carousel: card_carousel
     target_bundles_drag_drop:
       banner:
         weight: -33
@@ -121,6 +123,9 @@ settings:
       latest_events:
         enabled: true
         weight: 29
+      card_carousel:
+        enabled: true
+        weight: 30
       contact_us:
         weight: 34
         enabled: false
