Update after code review

--- a/config/install/field.storage.paragraph.field_paragraph_search_block.yml
+++ b/config/install/field.storage.paragraph.field_paragraph_search_block.yml
@@ -14,7 +14,7 @@ settings:
       value: none
       label: None
     -
-      value: events
+      value: event
       label: Events
     -
       value: news
