--- a/tide_landing_page.info.yml
+++ b/tide_landing_page.info.yml
@@ -44,6 +44,7 @@ config_devel:
     - core.entity_form_display.paragraph.card_navigation_featured_auto.default
     - core.entity_form_display.paragraph.card_promotion.default
     - core.entity_form_display.paragraph.card_promotion_auto.default
+    - core.entity_form_display.paragraph.embedded_search_form.default
     - core.entity_form_display.paragraph.key_journeys.default
     - core.entity_form_display.paragraph.keydates.default
     - core.entity_form_display.paragraph.latest_events.default
@@ -74,6 +75,7 @@ config_devel:
     - core.entity_view_display.paragraph.card_promotion.default
     - core.entity_view_display.paragraph.card_promotion_auto.default
     - core.entity_view_display.paragraph.card_promotion.default
+    - core.entity_view_display.paragraph.embedded_search_form.default
     - core.entity_view_display.paragraph.embedded_webform.default
     - core.entity_view_display.paragraph.embedded_webform.preview
     - core.entity_view_display.paragraph.featured_news.default
@@ -162,6 +164,7 @@ config_devel:
     - field.field.paragraph.card_promotion.field_paragraph_topic
     - field.field.paragraph.card_promotion_auto.field_paragraph_reference
     - field.field.paragraph.card_promotion_auto.field_paragraph_cta_text
+    - field.field.paragraph.embedded_search_form.field_paragraph_search_block
     - field.field.paragraph.introduction_banner.field_paragraph_links
     - field.field.paragraph.introduction_banner.field_paragraph_summary
     - field.field.paragraph.introduction_banner.field_paragraph_title
@@ -232,6 +235,7 @@ config_devel:
     - field.storage.paragraph.field_paragraph_phone_number
     - field.storage.paragraph.field_paragraph_phone_title
     - field.storage.paragraph.field_paragraph_phones
+    - field.storage.paragraph.field_paragraph_search_block
     - field.storage.paragraph.field_paragraph_social_list
     - field.storage.paragraph.field_paragraph_social_media
     - field.storage.paragraph.field_paragraph_webform
@@ -250,6 +254,7 @@ config_devel:
     - paragraphs.paragraphs_type.card_navigation_featured_auto
     - paragraphs.paragraphs_type.card_promotion
     - paragraphs.paragraphs_type.card_promotion_auto
+    - paragraphs.paragraphs_type.embedded_search_form
     - paragraphs.paragraphs_type.embedded_webform
     - paragraphs.paragraphs_type.featured_news
     - paragraphs.paragraphs_type.introduction_banner
