--- a/config/install/core.entity_form_display.paragraph.card_event.default.yml
+++ b/config/install/core.entity_form_display.paragraph.card_event.default.yml
@@ -1,10 +1,10 @@
+uuid: 155243cf-07b3-447b-ae6d-02b69e9d55b0
 langcode: en
 status: true
 dependencies:
   config:
     - entity_browser.browser.tide_image_browser
     - field.field.paragraph.card_event.field_paragraph_cta
-    - field.field.paragraph.card_event.field_paragraph_date
     - field.field.paragraph.card_event.field_paragraph_date_range
     - field.field.paragraph.card_event.field_paragraph_location
     - field.field.paragraph.card_event.field_paragraph_media
@@ -14,10 +14,11 @@ dependencies:
     - paragraphs.paragraphs_type.card_event
   module:
     - address
-    - datetime
     - datetime_range
     - entity_browser
     - link
+_core:
+  default_config_hash: agxBVeITdtibaABss7iJFlszvuYjwCvmRSwanCvthpo
 id: paragraph.card_event.default
 targetEntityType: paragraph
 bundle: card_event
@@ -30,12 +31,6 @@ content:
       placeholder_title: ''
     third_party_settings: {  }
     type: link_default
-    region: content
-  field_paragraph_date:
-    weight: 2
-    settings: {  }
-    third_party_settings: {  }
-    type: datetime_default
     region: content
   field_paragraph_date_range:
     weight: 3
