--- a/config/install/core.entity_view_display.paragraph.card_event.default.yml
+++ b/config/install/core.entity_view_display.paragraph.card_event.default.yml
@@ -1,9 +1,9 @@
+uuid: a93ced25-d6eb-4d34-92ad-78c406bd57be
 langcode: en
 status: true
 dependencies:
   config:
     - field.field.paragraph.card_event.field_paragraph_cta
-    - field.field.paragraph.card_event.field_paragraph_date
     - field.field.paragraph.card_event.field_paragraph_date_range
     - field.field.paragraph.card_event.field_paragraph_location
     - field.field.paragraph.card_event.field_paragraph_media
@@ -13,9 +13,10 @@ dependencies:
     - paragraphs.paragraphs_type.card_event
   module:
     - address
-    - datetime
     - datetime_range
     - link
+_core:
+  default_config_hash: 0ulRWD_sj1X3OPk881pLuMCM8BuX2IEHvBlesABWEmQ
 id: paragraph.card_event.default
 targetEntityType: paragraph
 bundle: card_event
@@ -32,15 +33,6 @@ content:
       target: ''
     third_party_settings: {  }
     type: link
-    region: content
-  field_paragraph_date:
-    weight: 4
-    label: above
-    settings:
-      format_type: medium
-      timezone_override: ''
-    third_party_settings: {  }
-    type: datetime_default
     region: content
   field_paragraph_date_range:
     weight: 5
