--- a/composer.json
+++ b/composer.json
@@ -30,5 +30,10 @@
         },
         "process-timeout": 0,
         "sort-packages": true
+    },
+    "patches": {
+        "dpc-sdp/tide_core": {
+            "SDPA-1328: Added the URL enhancer configuration for Timelines.": "https://patch-diff.githubusercontent.com/raw/dpc-sdp/tide_core/pull/38.patch"
+        }
     }
 }
