--- a/config/install/core.entity_view_display.node.landing_page.default.yml
+++ b/config/install/core.entity_view_display.node.landing_page.default.yml
@@ -1,3 +1,4 @@
+uuid: cd6f3006-7751-4057-a9bf-07ee3cc3bd3d
 langcode: en
 status: true
 dependencies:
@@ -7,6 +8,7 @@ dependencies:
     - field.field.node.landing_page.field_landing_page_bg_colour
     - field.field.node.landing_page.field_landing_page_c_primary
     - field.field.node.landing_page.field_landing_page_c_secondary
+    - field.field.node.landing_page.field_landing_page_card_comp
     - field.field.node.landing_page.field_landing_page_component
     - field.field.node.landing_page.field_landing_page_contact
     - field.field.node.landing_page.field_landing_page_hero_image
@@ -38,7 +40,7 @@ dependencies:
     - options
     - user
 _core:
-  default_config_hash: sMSNyLAySfCJcMykcHr3cyYRCKXQBAnEd4NySLTql18
+  default_config_hash: wfobM37Ql9MA9pK5G1NRvNfIZBGrTaa1MCY2vuvCKps
 id: node.landing_page.default
 targetEntityType: node
 bundle: landing_page
@@ -89,6 +91,15 @@ content:
       link: ''
     third_party_settings: {  }
     type: entity_reference_revisions_entity_view
+    region: content
+  field_landing_page_card_comp:
+    type: entity_reference_revisions_entity_view
+    weight: 24
+    label: above
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
     region: content
   field_landing_page_component:
     weight: 1
