--- a/composer.json
+++ b/composer.json
@@ -4,9 +4,9 @@
     "type": "drupal-module",
     "license": "GPL-2.0+",
     "require": {
-        "dpc-sdp/tide_core": "dev-feature/SDPA-1328-timeline-api-overwrites",
+        "dpc-sdp/tide_core": "@dev",
         "dpc-sdp/tide_event": "@dev",
-        "dpc-sdp/tide_media": "dev-feature/SDPA-1328_timeline-api-overwrites",
+        "dpc-sdp/tide_media": "@dev",
         "drupal/paragraphs": "1.2",
         "drupal/maxlength": "^1.0@beta",
         "drupal/smart_trim": "^1.1"
@@ -14,7 +14,7 @@
     "suggest": {
         "dpc-sdp/tide_api": "@dev",
         "dpc-sdp/tide_news": "@dev",
-        "dpc-sdp/tide_webform": "dev-feature/SDPA-1328_timeline-api-overwrites"
+        "dpc-sdp/tide_webform": "@dev"
     },
     "repositories": {
         "drupal": {
