--- a/config/install/paragraphs.paragraphs_type.embedded_webform.yml
+++ b/config/install/paragraphs.paragraphs_type.embedded_webform.yml
@@ -1,8 +1,8 @@
 langcode: en
 status: true
 dependencies: {  }
-id: timelines
-label: Timelines
+id: embedded_webform
+label: 'Embedded Webform'
 icon_uuid: null
 description: ''
 behavior_plugins: {  }
