--- a/config/install/core.entity_view_display.paragraph.news_listing.default.yml
+++ b/config/install/core.entity_view_display.paragraph.news_listing.default.yml
@@ -2,6 +2,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.paragraph.news_listing.field_paragraph_title
     - field.field.paragraph.news_listing.field_paragraph_topic
     - paragraphs.paragraphs_type.news_listing
 id: paragraph.news_listing.default
@@ -9,6 +10,14 @@ targetEntityType: paragraph
 bundle: news_listing
 mode: default
 content:
+  field_paragraph_title:
+    weight: 1
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
   field_paragraph_topic:
     weight: 0
     label: above
