--- a/tide_landing_page.info.yml
+++ b/tide_landing_page.info.yml
@@ -179,6 +179,7 @@ config_devel:
     - field.field.paragraph.latest_events.field_paragraph_cta_card_event
     - field.field.paragraph.latest_events.field_paragraph_title
     - field.field.paragraph.media_gallery.field_paragraph_media_gallery
+    - field.field.paragraph.news_listing.field_paragraph_title
     - field.field.node.landing_page.field_landing_page_contact
     - field.field.node.landing_page.field_landing_page_show_contact
     - field.field.node.landing_page.field_landing_page_summary
