--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "drupal-module",
     "license": "GPL-2.0+",
     "require": {
-        "dpc-sdp/tide_core": "@dev",
+        "dpc-sdp/tide_core": "dev-master",
         "dpc-sdp/tide_event": "@dev",
         "dpc-sdp/tide_media": "dev-master",
         "drupal/paragraphs": "^1.2",
