--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "drupal-module",
     "license": "GPL-2.0+",
     "require": {
-        "dpc-sdp/tide_core": "@dev",
+        "dpc-sdp/tide_core": "dev-feature/SDPA-1159-Remove-Field-Show-News-Search-Block",
         "dpc-sdp/tide_event": "@dev",
         "dpc-sdp/tide_media": "@dev",
         "drupal/paragraphs": "^1.2",
